Corrected color contrast errors

--- a/styles/base.css
+++ b/styles/base.css
@@ -137,6 +137,7 @@ main {
 
 footer {
     background: #133C55;
+    color: white;
     padding: 2rem;
     text-align: center;
     grid-column: 1 / 4;
