--- a/styles/temples.css
+++ b/styles/temples.css
@@ -109,7 +109,7 @@ figure {
 figcaption {
     font-size: 1.2rem;
     margin-top: 8px;
-    color: grey;
+    color: black;
 }
 
 .templeImage img {
@@ -140,6 +140,7 @@ nav ul li {
 
 footer {
     background: #133C55;
+    color: white;
     padding: 2rem;
     text-align: center;
     grid-column: 1 / 4;
